  like '+2' must be treated as file names.

** Improvements

  df now filters the system mount list more efficiently, with 20000
  mount entries now being processed in about 1.1s compared to 1.7s.

  install -Z now also sets the default SELinux context for created directories.

  ls is now fully responsive to signals until the first escape sequence is
  written to a terminal.

  stat and tail now know about "prl_fs" (a parallels file system),
  "m1fs" (a Plexistor file system), "wslfs" (Windows Subsystem for Linux),
  and "smb2".  stat -f --format=%T now reports the file system type, and
  tail -f uses polling for "prl_fs" and "smb2", inotify for "m1fs",
  and attempts inotify for "wslfs".

  stat --format=%N for quoting file names now honors the
  same QUOTING_STYLE environment variable values as ls.

** New programs

  b2sum is added to support the BLAKE2 digest algorithm with
  a similar interface to the existing md5sum and sha1sum, etc. commands.

** New Features

  date now accepts the --debug option, to annotate the parsed date string,
  display timezone information, and warn about potential misuse.

  date now accepts the %q format to output the quarter of the year.


* Noteworthy changes in release 8.25 (2016-01-20) [stable]

** Bug fixes

  cp now correctly copies files with a hole at the end of the file,
  and extents allocated beyond the apparent size of the file.
  That combination resulted in the trailing hole not being reproduced.
  [bug introduced in coreutils-8.10]

  cut --fields no longer outputs extraneous characters on some uClibc configs.
  [bug introduced in coreutils-6.11]

  install -D again copies relative file names when absolute file names
  are also specified along with an absolute destination directory name.
  [bug introduced in coreutils-6.2]

  ls no longer prematurely wraps lines when printing short file names.
  [bug introduced in coreutils-5.1.0]

  mv no longer causes data loss due to removing a source directory specified